# demo-poetry-dynamic-semver-with-docker-hub-push

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-build-check.yaml  docker-push.yml  pre-commit-checks.yml
src/wintry/: __init__.py  main.py
tests/: test_main.py
